<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity_Nivel5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/idLayoutFondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:elevation="8dp">
            <ImageView
                android:id="@+id/im"
                android:layout_width="50dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/animal" />
            <TextView
                android:id="@+id/textnivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="Operaciones matemáticas"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold|italic" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_nombre"
        android:layout_alignStart="@+id/textView_nombre"
        android:text="@string/total_score"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView_Manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_nombre"
        android:layout_alignTop="@+id/imageView_vidas"
        android:layout_marginStart="230dp"
        android:layout_marginTop="20dp"
        android:text="@string/et_vidas"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_below="@+id/textView_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="296dp"
        android:layout_marginTop="-59dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/tresvidas"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:text="¿Cúanto es?"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="20dp"
        android:textSize="32dp"
        android:textColor="#3949AB"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView_NumUno"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="179dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_alignBottom="@+id/imageView_NumUno"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-2dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/division" />


    <ImageView
        android:id="@+id/imageView_NumDos"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/imageView_NumUno"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <Button
        android:id="@+id/button2"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginTop="335dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/boton"
        android:onClick="Comparar"
        android:text="@string/boton_sumar"
        android:textColor="@android:color/background_light"
        android:textSize="12dp"
        android:textStyle="bold|italic" />
    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:layout_marginTop="330dp"
        android:layout_marginLeft="110dp"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number"
        android:textStyle="bold|italic"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="58dp"
        android:background="#C0CA33"
        android:text="¡Puedes lograrlo!"
        android:textAlignment="center"
        android:textColor="#3949AB"
        android:textSize="22dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lblcuenta"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="338dp"
        android:layout_marginLeft="212dp"
        android:autofillHints=""
        android:ems="10"
        android:text=""
        android:textColor="#1E88E5"
        android:textSize="17dp"
        android:textStyle="bold|italic"
        tools:targetApi="o" />
</RelativeLayout>