<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".AdivinarAnimal">
    <RelativeLayout
        android:id="@+id/idLayoutFondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:elevation="8dp">
        <ImageView
            android:id="@+id/im"
            android:layout_width="50dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="2dp"
            android:src="@drawable/animal" />
        <TextView
            android:id="@+id/textnivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="Adivina el animal"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold|italic" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/informacion"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="false">
        <TextView
            android:id="@+id/textView_Manzanas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView_vidas"
            android:layout_marginStart="240dp"
            android:layout_marginTop="20dp"
            android:text="@string/et_vidas"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView_vidas"
            android:layout_width="82dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="290dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/tresvidas"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_nombre"
        android:layout_alignStart="@+id/textView_nombre"
        android:text="@string/total_score"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:text="¿Qué animal es?"
        android:layout_marginTop="115dp"
        android:layout_marginLeft="20dp"
        android:textSize="32dp"
        android:textColor="#3949AB"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="0dp"
        android:layout_below="@+id/titulo"
        android:layout_above="@+id/Botones">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:id="@+id/miimagen"
            android:adjustViewBounds="true"
            android:layout_gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/delfin"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/Botones"
        android:layout_margin="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn1"
                android:textStyle="bold|italic"
                android:textColor="#fff"
                android:clickable="true"
                android:background="@drawable/boton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn2"
                android:layout_gravity="center_horizontal"
                android:enabled="true"
                android:clickable="true"
                android:textStyle="bold|italic"
                android:textColor="#fff"
                android:layout_marginLeft="5dp"
                android:background="@drawable/boton"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="4dp"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn3"
                android:clickable="true"
                android:background="@drawable/boton"
                android:textColor="#fff"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:layout_marginLeft="5dp"
                android:id="@+id/btn4"
                android:textColor="#fff"
                android:textStyle="bold|italic"
                android:background="@drawable/boton"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1E88E5"
            android:textStyle="bold|italic"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/lblcuenta" />
    </LinearLayout>
</RelativeLayout>